--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -27,6 +27,7 @@
   },
   "rules": {
     "no-console": "warn",
+    "react/no-unescaped-entities": "off",
     "react/prop-types": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
