--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.38",
